--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Ultroid UserBot",
+    "name": "Verly (Space Ultroid) UserBot",
     "description": "Pluggable telegram userbot, made in python using Telethon.",
     "logo": "https://graph.org/file/031957757a4f6a5191040.jpg",
     "keywords": [
@@ -9,14 +9,14 @@
         "python",
         "ultroid"
     ],
-    "repository": "https://github.com/TeamUltroid/Ultroid",
+    "repository": "https://github.com/SpaceNetworkDev/Verly",
     "website": "https://ultroid.tech",
-    "success_url": "https://t.me/TeamUltroid",
+    "success_url": "https://t.me/SpaceNetworkEU",
     "stack": "container",
     "env": {
         "API_ID": {
             "description": "You api id, from my.telegram.org or @ScrapperRoBot.",
-            "value": "", 
+            "value": "",
             "required": false
         },
         "API_HASH": {
